syntax = "proto3";

service User {
    rpc GetAllUsers(EmptyUser) returns (stream UserItem) {}
    rpc GetUserById(Id) returns (UserItem) {}
    rpc GetBookings() returns (){}
}

message UserItem {
    string id = 1;
    string name = 2;
    string lastactive = 3;
}

message UserId {
    string id
}

message EmptyUser {}